fix: properly add freedom theme as git submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "themes/freedom"]
 	path = themes/freedom
-	url = https://github.com/gauthamchettiar/freedom/
+	url = https://github.com/gauthamchettiar/freedom.git
 	branch = main
