--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,4 +1,4 @@
-baseURL: https://example.org/
+baseURL: https://freedom-demo.gauthamchettiar.com/
 languageCode: en-us
 title: Freedom
 theme: freedom
@@ -11,6 +11,9 @@ menus:
   - name: Guide
     pageRef: /guide
     weight: 10
+  - name: Components
+    pageRef: /components
+    weight: 20
   - name: Tags
     pageRef: /tags
     weight: 30
