docs: adding docs for all latest features added to theme

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -5,6 +5,10 @@ theme: freedom
 
 params:
   author: Gautham Chettiar
+  social:
+    github: "https://github.com/gauthamchettiar"
+    email: "gauthamchettiar@gmail.com"
+    linkedin: "https://www.linkedin.com/in/gauthamchettiar/"
 
 menus:
   main:
